--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,4 +61,9 @@ endif()
 
 subdirs(KeybdSystem SimpleBrowser)
 
+# WinKiosk.exe
+add_executable(WinKiosk WIN32 WinKiosk.cpp)
+target_compile_definitions(WinKiosk PRIVATE -DUNICODE)
+target_link_libraries(WinKiosk PRIVATE shlwapi)
+
 ##############################################################################
